--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1108,6 +1108,50 @@ body {
   font-size: 18px;
 }
 
+.desk-total-view {
+  background: -webkit-gradient(linear, left top, left bottom, from(#B40DFF), to(#650ADD));
+  background: linear-gradient(180deg, #B40DFF 0%, #650ADD 100%);
+  border-radius: 12px;
+  min-height: 50px;
+  margin-bottom: 20px;
+  color: #fff;
+  text-align: center;
+  position: relative;
+  margin: 0px;
+  margin-top: 25px;
+  margin-bottom: 35px;
+}
+
+.desk-total-view.white {
+  background: #fff;
+  color: #000;
+}
+
+.desk-total-view.white::after {
+  background: #ddd;
+}
+
+.desk-total-view::after {
+  width: 2px;
+  height: 100%;
+  background: #fff;
+  content: " ";
+  position: absolute;
+  left: 50%;
+  top: 0px;
+}
+
+.desk-total-view label {
+  font-size: 20px;
+  margin-top: 10px !important;
+  line-height: 20px;
+}
+
+.desk-total-view label span {
+  display: block;
+  font-size: 18px;
+}
+
 .menu-dots {
   position: absolute;
   right: 15px;
@@ -1263,6 +1307,128 @@ body {
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 768px) {
+  .collapse-area .collapse-container .collapse-header span {
+    font-size: 14px;
+  }
+  .wrapper {
+    padding-left: 0px;
+  }
+  .navbar-cstm {
+    padding-left: 0px;
+  }
+  .menu-btn {
+    display: block;
+  }
+  .menu-close {
+    display: block;
+  }
+  .logo-sidebar {
+    display: none;
+  }
+  .hidden-lg {
+    display: block;
+  }
+  .extra-space {
+    min-height: 100px;
+    padding: 25px;
+    background: #fff;
+  }
+  .extra-space .dropdown-toggle::after {
+    display: none;
+  }
+  .extra-space .cstm-drop {
+    margin-top: 5px;
+  }
+  .sidebar-wrapper {
+    z-index: 99;
+    background: #f5f5f5;
+    -webkit-box-shadow: 0px 0px 10px #bdbdbd;
+            box-shadow: 0px 0px 10px #bdbdbd;
+  }
+  .sidebar-wrapper .menu-list {
+    margin-top: 20px;
+  }
+  .sidebar-wrapper .menu-list a {
+    border-left: 0px;
+  }
+  .container-login {
+    width: 90%;
+    margin: 20% auto;
+  }
+  .container-login .ls-panel {
+    padding: 30px 25px;
+  }
+  .tab-cstm div.nav-item a {
+    font-size: 14px;
+    padding: 2px 10px !important;
+  }
+  .mb-total-view {
+    display: block;
+  }
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 768px) and (-webkit-min-device-pixel-ratio: 2) {
+  .collapse-area .collapse-container .collapse-header span {
+    font-size: 14px;
+  }
+  .wrapper {
+    padding-left: 0px;
+  }
+  .navbar-cstm {
+    padding-left: 0px;
+  }
+  .menu-btn {
+    display: block;
+  }
+  .menu-close {
+    display: block;
+  }
+  .logo-sidebar {
+    display: none;
+  }
+  .hidden-lg {
+    display: block;
+  }
+  .extra-space {
+    min-height: 100px;
+    padding: 25px;
+    background: #fff;
+  }
+  .extra-space .dropdown-toggle::after {
+    display: none;
+  }
+  .extra-space .cstm-drop {
+    margin-top: 5px;
+  }
+  .sidebar-wrapper {
+    z-index: 99;
+    background: #f5f5f5;
+    -webkit-box-shadow: 0px 0px 10px #bdbdbd;
+            box-shadow: 0px 0px 10px #bdbdbd;
+  }
+  .sidebar-wrapper .menu-list {
+    margin-top: 20px;
+  }
+  .sidebar-wrapper .menu-list a {
+    border-left: 0px;
+  }
+  .container-login {
+    width: 90%;
+    margin: 20% auto;
+  }
+  .container-login .ls-panel {
+    padding: 30px 25px;
+  }
+  .tab-cstm div.nav-item a {
+    font-size: 14px;
+    padding: 2px 10px !important;
+  }
+  .mb-total-view {
+    display: block;
+  }
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
   .collapse-area .collapse-container .collapse-header span {
     font-size: 14px;
   }
