--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -975,6 +975,44 @@ body {
   }
 }
 
+.desk-total-view{
+  background: linear-gradient(180deg, #B40DFF 0%, #650ADD 100%);
+  border-radius: 12px;
+  min-height: 50px;
+  margin-bottom: 20px;
+  color: #fff;
+  text-align: center;
+  position: relative;
+  margin: 0px;
+  margin-top: 25px;
+  margin-bottom: 35px;
+  &.white{
+    background: #fff;
+    color: #000;
+    &::after{
+      background: #ddd;
+    }
+  }
+  &::after{
+    width: 2px;
+    height: 100%;
+    background: #fff;
+    content: " ";
+    position: absolute;
+    left: 50%;
+    top: 0px;
+  }
+  label{
+    font-size: 20px;
+    margin-top: 10px !important;
+    line-height: 20px;
+    span{
+      display: block;
+      font-size: 18px;
+    }
+  }
+}
+
 .menu-dots{
   position: absolute;
   right: 15px;
@@ -1125,6 +1163,144 @@ body {
 @media only screen 
   and (min-device-width: 320px) 
   and (max-device-width: 768px) { 
+
+    .collapse-area .collapse-container .collapse-header span{
+      font-size: 14px;
+    }
+    .wrapper{
+      padding-left: 0px;
+    }
+    .navbar-cstm{
+      padding-left: 0px;
+    }
+    .menu-btn{
+      display: block;
+    }
+    .menu-close{
+      display: block;
+    }
+    .logo-sidebar{
+      display: none;
+    }
+    .hidden-lg{
+      display: block;
+    }
+    .extra-space{
+      min-height: 100px;
+      padding: 25px;
+      background: #fff;
+      .dropdown-toggle{
+        &::after{
+          display: none;
+        }
+      }
+      .cstm-drop{
+        margin-top: 5px;
+      }
+    }
+    .sidebar-wrapper{
+      z-index: 99;
+      background: #f5f5f5;
+      box-shadow: 0px 0px 10px #bdbdbd;
+      .menu-list{
+        margin-top: 20px;
+        a{
+          border-left: 0px;
+        }
+      }
+    }
+    .container-login{
+      width: 90%;
+      margin: 20% auto;
+      .ls-panel{
+        padding: 30px 25px;
+      }
+    }
+    .tab-cstm{
+      div.nav-item{
+        a{
+          font-size: 14px;
+          padding: 2px 10px !important;
+        }
+      }
+    }
+    .mb-total-view{
+      display: block;
+    }
+}
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 768px)
+  and (-webkit-min-device-pixel-ratio: 2) { 
+
+    .collapse-area .collapse-container .collapse-header span{
+      font-size: 14px;
+    }
+    .wrapper{
+      padding-left: 0px;
+    }
+    .navbar-cstm{
+      padding-left: 0px;
+    }
+    .menu-btn{
+      display: block;
+    }
+    .menu-close{
+      display: block;
+    }
+    .logo-sidebar{
+      display: none;
+    }
+    .hidden-lg{
+      display: block;
+    }
+    .extra-space{
+      min-height: 100px;
+      padding: 25px;
+      background: #fff;
+      .dropdown-toggle{
+        &::after{
+          display: none;
+        }
+      }
+      .cstm-drop{
+        margin-top: 5px;
+      }
+    }
+    .sidebar-wrapper{
+      z-index: 99;
+      background: #f5f5f5;
+      box-shadow: 0px 0px 10px #bdbdbd;
+      .menu-list{
+        margin-top: 20px;
+        a{
+          border-left: 0px;
+        }
+      }
+    }
+    .container-login{
+      width: 90%;
+      margin: 20% auto;
+      .ls-panel{
+        padding: 30px 25px;
+      }
+    }
+    .tab-cstm{
+      div.nav-item{
+        a{
+          font-size: 14px;
+          padding: 2px 10px !important;
+        }
+      }
+    }
+    .mb-total-view{
+      display: block;
+    }
+}
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px)
+  and (-webkit-min-device-pixel-ratio: 3) { 
 
     .collapse-area .collapse-container .collapse-header span{
       font-size: 14px;
