--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1456,6 +1456,10 @@ body {
 
 }
 
+.order-aside-mb{
+  display: none;
+}
+
 @media only screen 
   and (min-device-width: 320px) 
   and (max-device-width: 768px) { 
