--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -213,7 +213,7 @@ body {
   width: 100%;
   top: 0px;
   left: 0px;
-  z-index: 1;
+  z-index: 99;
   padding-left: 330px;
   &.full{
     padding-left: 0px;
@@ -746,6 +746,34 @@ body {
     padding-left: 20px;
   }
 }
+
+.modal-contact{
+  padding: 20px;
+  h3{
+    text-align: center;
+    margin-bottom: 30px;
+    margin-top: -20px;
+  }
+  label{
+    text-transform: uppercase;
+    font-size: 14px;
+    margin-left: 7px;
+    font-weight: 500;
+  }
+  input{
+    margin-bottom: 20px;
+  }
+  button{
+    margin-top: 30px;
+  }
+  .success-txt{
+    text-align: center;
+    font-weight: 600;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+}
+
 .cstm-select {
   &.mini {
     .css-yk16xz-control {
@@ -753,7 +781,7 @@ body {
       border: 1px solid #fff !important;
       border-radius: 50px !important;
       height: 35px !important;
-      width: 100px;
+      width: 120px;
     }
     .css-1pahdxg-control {
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.07) !important;
@@ -822,13 +850,13 @@ body {
     margin-left: 22px;
   }
   .time-block {
-    width: 220px;
+    width: 260px;
     float: right;
     margin-top: 3px;
     position: relative;
     .dash {
       position: absolute;
-      left: 107px;
+      left: 126px;
       top: 5px;
     }
   }
@@ -844,6 +872,7 @@ body {
       width: 100%;
       overflow: auto;
       padding: 5px;
+      z-index: 1;
     }
     .rotator {
       box-shadow: 0px 7px 20px rgba(0, 0, 0, 0.08);
@@ -1198,6 +1227,8 @@ body {
   border-radius: 10px !important;
   padding: 15px !important;
   height: auto;
+  z-index: 9;
+  cursor: pointer;
   .add-item{
     width: 65px;
     height: 65px;
@@ -1468,10 +1499,30 @@ body {
   display: none;
 }
 
+.mb-navigator{
+  position: fixed;
+  top: 0px;
+  z-index: 999;
+  width: 100%;
+  background: #fff;
+  height: 60px;
+  text-align: center;
+  display: none;
+  svg{
+    position: absolute;
+    left: 30px;
+    top: 22px;
+  }
+  p{
+    margin-top: 16px;
+    font-weight: 600;
+    font-size: 16px;
+  }
+}
+
 @media only screen 
   and (min-device-width: 320px) 
-  and (max-device-width: 768px) { 
-
+  and (max-device-width: 896px) { 
 
     .collapse-area .collapse-container .collapse-header span{
       font-size: 12px;
@@ -1508,7 +1559,7 @@ body {
       }
     }
     .sidebar-wrapper{
-      z-index: 99;
+      z-index: 999;
       background: #f5f5f5;
       box-shadow: 0px 0px 10px #bdbdbd;
       .menu-list{
@@ -1571,10 +1622,117 @@ body {
     .mb-visible{
       display: inline-flex;
     }
+    .mb-navigator{
+      display: block;
+    }
+}
+
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+    .collapse-area .collapse-container .collapse-header span{
+      font-size: 12px;
+    }
+    .wrapper{
+      padding-left: 0px;
+    }
+    .navbar-cstm{
+      padding-left: 0px;
+    }
+    .menu-btn{
+      display: block;
+    }
+    .menu-close{
+      display: block;
+    }
+    .logo-sidebar{
+      display: none;
+    }
+    .hidden-lg{
+      display: block;
+    }
+    .extra-space{
+      min-height: 100px;
+      padding: 25px;
+      background: #fff;
+      .dropdown-toggle{
+        &::after{
+          display: none;
+        }
+      }
+      .cstm-drop{
+        margin-top: 5px;
+      }
+    }
+    .sidebar-wrapper{
+      z-index: 999;
+      background: #f5f5f5;
+      box-shadow: 0px 0px 10px #bdbdbd;
+      .menu-list{
+        margin-top: 20px;
+        a{
+          border-left: 0px;
+        }
+      }
+    }
+    .container-login{
+      width: 90%;
+      margin: 20% auto;
+      .ls-panel{
+        padding: 30px 25px;
+      }
+    }
+    .tab-cstm{
+      div.nav-item{
+        a{
+          font-size: 14px;
+          padding: 2px 10px !important;
+        }
+      }
+    }
+    .mb-total-view{
+      display: block;
+    }
+    .ord-table .ord-title{
+      font-size: 13px;
+    }
+    .ord-table .price{
+      font-size: 13px;
+    }
+    .flex-area{
+      padding: 15px !important;
+    }
+    .order-detail{
+      height: 100%;
+    }
+    .mb-order-table{
+      .ord-table{
+        height: auto;
+      }
+    }
+    .mb-hidden{
+      display: none;
+    }
+    .order-ptable table td{
+      width: 20px;
+    }
+    .order-desc-area{
+      min-height: 85vh;
+    }
+    .collapse-area .collapse-container .collapse-content .col {
+      padding: 12px 10px;
+    }
+    .collapse-area .collapse-container .collapse-content .col input{
+      margin-bottom: 10px;
+    }
+    .mb-visible{
+      display: inline-flex;
+    }
+    .mb-navigator{
+      display: block;
+    }
 }
 @media only screen 
   and (min-device-width: 320px) 
-  and (max-device-width: 768px)
+  and (max-device-width: 896px)
   and (-webkit-min-device-pixel-ratio: 2) { 
 
     .collapse-area .collapse-container .collapse-header span{
@@ -1612,7 +1770,7 @@ body {
       }
     }
     .sidebar-wrapper{
-      z-index: 99;
+      z-index: 999;
       background: #f5f5f5;
       box-shadow: 0px 0px 10px #bdbdbd;
       .menu-list{
@@ -1660,10 +1818,13 @@ body {
     .collapse-area .collapse-container .collapse-content .col {
       padding: 12px 10px;
     }
+    .mb-navigator{
+      display: block;
+    }
 }
 @media only screen 
   and (min-device-width: 375px) 
-  and (max-device-width: 812px)
+  and (max-device-width: 896px)
   and (-webkit-min-device-pixel-ratio: 3) { 
 
     .collapse-area .collapse-container .collapse-header span{
@@ -1701,7 +1862,7 @@ body {
       }
     }
     .sidebar-wrapper{
-      z-index: 99;
+      z-index: 999;
       background: #f5f5f5;
       box-shadow: 0px 0px 10px #bdbdbd;
       .menu-list{
@@ -1749,6 +1910,9 @@ body {
     .collapse-area .collapse-container .collapse-content .col {
       padding: 12px 10px;
     }
+    .mb-navigator{
+      display: block;
+    }
 }
 
 @media only screen 
@@ -1767,5 +1931,8 @@ body {
     }
     .collapse-area .collapse-container .collapse-content .col {
       padding: 12px 10px;
+    }
+    .mb-navigator{
+      display: block;
     }
   }
