--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -6,6 +6,11 @@ body {
   padding-top: 60px;
 }
 
+.error-show{
+  display: block;
+  width: 100%;
+}
+
 .container-login {
   position: relative;
   display: block;
