--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -30,6 +30,10 @@ body {
   border-radius: 14px;
 }
 
+.full-width{
+  width: 100% !important;
+}
+
 .container-login .ls-panel h3 {
   margin-bottom: 24px;
   margin-top: -10px;
@@ -848,6 +852,7 @@ body {
   overflow: auto;
   resize: none;
   padding-left: 20px;
+  padding-top: 
 }
 
 .modal-contact {
