--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -11,6 +11,19 @@ body {
   width: 100%;
 }
 
+.error-show p {
+  width: 50%;
+  display: inline-block;
+  font-size: 11px;
+  text-align: center;
+  font-weight: 500;
+}
+
+.error-txt {
+  font-size: 11px;
+  font-weight: 500;
+}
+
 .container-login {
   position: relative;
   display: block;
@@ -33,10 +46,6 @@ body {
   padding: 30px 50px;
   margin-top: -25px;
   border-radius: 14px;
-}
-
-.full-width{
-  width: 100% !important;
 }
 
 .container-login .ls-panel h3 {
@@ -741,6 +750,11 @@ body {
   width: 47%;
 }
 
+.mod-rest-container .cstm-select-full {
+  margin-bottom: 20px;
+  width: 100%;
+}
+
 .mod-rest-container .uni-input {
   margin-bottom: 20px;
 }
@@ -891,6 +905,10 @@ body {
   font-weight: 600;
   padding-top: 50px;
   padding-bottom: 50px;
+}
+
+.cstm-select-full {
+  width: 100%;
 }
 
 .cstm-select.mini .css-yk16xz-control {
