--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -9,6 +9,18 @@ body {
 .error-show{
   display: block;
   width: 100%;
+  p{
+    width: 50%;
+    display: inline-block;
+    font-size: 11px;
+    text-align:center;
+    font-weight: 500;
+  }
+}
+
+.error-txt{
+  font-size: 11px;
+  font-weight: 500;
 }
 
 .container-login {
