--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5,6 +5,14 @@ body {
   font-weight: 400;
   padding-top: 60px;
 }
+.avatar{
+  position: absolute;
+  left: -50px;
+}
+
+.headerImage{
+  background-size: 100% 100% !important;
+}
 
 .error-show {
   display: block;
