--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -6,6 +6,9 @@ body {
   padding-top: 60px;
 }
 
+.headerImage{
+  background-size: 100% 100% !important;
+}
 .error-show{
   display: block;
   width: 100%;
